[gd_scene load_steps=6 format=3 uid="uid://rvijg7jd0yny"]

[ext_resource type="Texture2D" uid="uid://cl8jnnfkb2a1l" path="res://Enemies/black-370118_1280.png" id="1_4e0cl"]
[ext_resource type="Script" path="res://Level/GameOver.gd" id="1_l684a"]
[ext_resource type="FontFile" uid="uid://bvred4n7nny2" path="res://ARCADECLASSIC.TTF" id="2_6bb2v"]

[sub_resource type="Curve" id="Curve_qewi8"]
min_value = -1.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="LabelSettings" id="LabelSettings_vl1ks"]
font = ExtResource("2_6bb2v")
font_size = 186

[node name="Control" type="Node2D"]
script = ExtResource("1_l684a")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(645, 342)
texture = ExtResource("1_4e0cl")

[node name="CPUParticles2D2" type="CPUParticles2D" parent="."]
position = Vector2(636, -69)
amount = 300
lifetime = 2.0
preprocess = 3.0
speed_scale = 0.75
fixed_fps = 50
emission_shape = 3
emission_rect_extents = Vector2(650, 0)
scale_amount_max = 2.0
color = Color(1, 0.290196, 0, 1)
hue_variation_min = -1.0
hue_variation_max = 1.0
hue_variation_curve = SubResource("Curve_qewi8")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 3.0
offset_top = 4.0
offset_right = 1281.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -420.0
offset_right = 420.0
offset_bottom = 190.0
grow_horizontal = 2
size_flags_horizontal = 4
text = "Game Over"
label_settings = SubResource("LabelSettings_vl1ks")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.0
offset_top = -80.645
offset_right = 93.0
offset_bottom = 16.355
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_6bb2v")
theme_override_font_sizes/font_size = 35
text = "Play Again"

[node name="Button2" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.0
offset_top = 18.625
offset_right = 85.0
offset_bottom = 72.625
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_6bb2v")
theme_override_font_sizes/font_size = 35
text = "Main Menu
"

[node name="Button3" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.0
offset_top = 83.0
offset_right = 47.0
offset_bottom = 137.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_6bb2v")
theme_override_font_sizes/font_size = 35
toggle_mode = true
text = "Quit"

[connection signal="pressed" from="Control/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Control/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Control/Button3" to="." method="_on_button_3_pressed"]
